fix(backend): auto-detect GitHub OAuth redirect URI for production
- Add github_oauth_redirect_uri_computed property that auto-constructs redirect URI
- In production: uses FRONTEND_URL to build callback URL (/api/auth/github/callback)
- In development: uses localhost:8000
- Fixes issue where GitHub OAuth redirected to localhost instead of EC2 domain
- Update auth route to use computed redirect URI

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -36,6 +36,7 @@ services:
       MCP_GITHUB_PORT: ${MCP_GITHUB_PORT:-8000}
       ENVIRONMENT: production
       FRONTEND_URL: https://${DOMAIN}
+      # GITHUB_OAUTH_REDIRECT_URI will be auto-computed from FRONTEND_URL if not set
     expose:
       - "8000"
     healthcheck:
