--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ openai = "^1.3.0"
 pgvector = "^0.2.4"
 psycopg2-binary = "^2.9.9"
 python-dotenv = "^1.0.0"
+greenlet = "^3.2.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
