--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,58 +1,53 @@
-FROM node:20-alpine AS base
+# ---------- Base ----------
+    FROM node:20-alpine AS base
 
-# Install dependencies only when needed
-FROM base AS deps
-RUN apk add --no-cache libc6-compat
-WORKDIR /app
-
-# Copy package files (include lock file for reproducible builds)
-COPY package.json package-lock.json* ./
-
-# Install all dependencies (needed for build)
-RUN npm ci
-
-# Rebuild the source code only when needed
-FROM base AS builder
-WORKDIR /app
-
-# Copy dependencies from deps stage
-COPY --from=deps /app/node_modules ./node_modules
-
-# Copy source code
-COPY . .
-
-# Build Next.js
-ENV NEXT_TELEMETRY_DISABLED 1
-ENV NODE_ENV production
-RUN npm run build
-
-# Production image
-FROM base AS runner
-WORKDIR /app
-
-ENV NODE_ENV production
-ENV NEXT_TELEMETRY_DISABLED 1
-
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
-
-# Copy built application from standalone output
-# Next.js standalone output structure: .next/standalone contains the server
-COPY --from=builder --chown=nextjs:nodejs /app/public ./public
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
-
-USER nextjs
-
-EXPOSE 3000
-
-ENV PORT 3000
-ENV HOSTNAME "0.0.0.0"
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
-    CMD node -e "require('http').get('http://localhost:3000', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})" || exit 1
-
-# Next.js standalone puts server.js in the root of standalone output
-CMD ["node", "server.js"]
-
+    ENV NODE_ENV=production \
+        NEXT_TELEMETRY_DISABLED=1
+    
+    # ---------- Dependencies ----------
+    FROM base AS deps
+    RUN apk add --no-cache libc6-compat
+    WORKDIR /app
+    COPY package.json package-lock.json* ./
+    RUN npm ci
+    
+    # ---------- Builder ----------
+    FROM base AS builder
+    RUN apk add --no-cache libc6-compat
+    WORKDIR /app
+    COPY --from=deps /app/node_modules ./node_modules
+    COPY . .
+    # If you use sharp or other native deps, this helps during build
+    ENV NODE_OPTIONS="--max_old_space_size=2048"
+    RUN npm run build
+    
+    # ---------- Runner ----------
+    FROM base AS runner
+    RUN apk add --no-cache libc6-compat
+    WORKDIR /app
+    
+    # Create non-root
+    RUN addgroup --system --gid 1001 nodejs \
+     && adduser --system --uid 1001 nextjs
+    USER nextjs
+    
+    # Copy standalone output
+    COPY --from=builder --chown=nextjs:nodejs /app/public ./public
+    COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+    COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+    
+    ENV PORT=3000 \
+        HOSTNAME=0.0.0.0 \
+        NODE_ENV=production \
+        NEXT_TELEMETRY_DISABLED=1 \
+        NODE_OPTIONS="--enable-source-maps"
+    
+    EXPOSE 3000
+    
+    # Health check hits a cheap page; change to /health if you have one
+    HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
+        CMD node -e "require('http').get('http://localhost:3000', r => process.exit(r.statusCode===200?0:1)).on('error', ()=>process.exit(1))" || exit 1
+    
+    # Next standalone provides server.js in root
+    CMD ["node", "server.js"]
+    
