Update backend Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,5 @@
+# syntax=docker/dockerfile:1.7
+
 # ---------- Builder: build wheels via Poetry ----------
   FROM python:3.12-slim AS builder
 
@@ -23,7 +25,7 @@
   # Copy lockfiles early for caching
   COPY pyproject.toml poetry.lock* ./
   
-  # Export pinned requirements (no hashes to avoid resolver conflicts in slim)
+  # Export pinned requirements (no hashes keeps export slim-friendly)
   RUN poetry export -f requirements.txt --without dev --without-hashes -o requirements.txt
   
   # Prebuild wheels
@@ -37,8 +39,8 @@
   # ---------- Runtime: minimal image ----------
   FROM python:3.12-slim AS runtime
   
-  # Metadata
-  LABEL org.opencontainers.image.source="https://example.com/your/repo" \
+  # Metadata (adjust source if you want)
+  LABEL org.opencontainers.image.source="https://github.com/TanmayRanaware/AppLens" \
         org.opencontainers.image.title="applens-backend" \
         org.opencontainers.image.description="AppLens backend service" \
         org.opencontainers.image.licenses="Apache-2.0"
@@ -46,15 +48,19 @@
   ENV PYTHONDONTWRITEBYTECODE=1 \
       PYTHONUNBUFFERED=1 \
       PIP_DISABLE_PIP_VERSION_CHECK=1 \
-      LANG=C.UTF-8 LC_ALL=C.UTF-8 TZ=UTC
+      LANG=C.UTF-8 \
+      LC_ALL=C.UTF-8 \
+      TZ=UTC
   
   # Optionally install psql client if truly needed
   # RUN --mount=type=cache,target=/var/cache/apt \
   #     --mount=type=cache,target=/var/lib/apt \
-  #     apt-get update -y && apt-get install -y --no-install-recommends postgresql-client && rm -rf /var/lib/apt/lists/*
+  #     apt-get update -y && apt-get install -y --no-install-recommends postgresql-client \
+  #     && rm -rf /var/lib/apt/lists/*
   
-  # Add non-root
+  # Add non-root user
   RUN addgroup --system app && adduser --system --ingroup app --uid 10001 appuser
+  
   WORKDIR /app
   
   # Install deps strictly from prebuilt wheels
@@ -70,20 +76,17 @@
   
   EXPOSE 8000
   
-  # Health check (adjust path)
+  # Health check (python -c one-liner; no heredoc)
   HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
-    CMD python - <<'PY' || exit 1
-  import urllib.request, sys
-  try:
-      with urllib.request.urlopen("http://localhost:8000/health", timeout=5) as r:
-          sys.exit(0 if r.status==200 else 1)
-  except Exception:
-      sys.exit(1)
-  PY
+    CMD ["python", "-c", "import urllib.request,sys; \
+  u=urllib.request.urlopen('http://localhost:8000/health', timeout=5); \
+  sys.exit(0 if getattr(u,'status',200)==200 else 1)"]
   
+  # Drop privileges
   USER appuser
   
-  # If you prefer Gunicorn+Uvicorn workers in prod:
+  # Start server (update module path if your app isn't app.main:app)
+  # For Gunicorn+Uvicorn in prod, consider:
   # CMD ["gunicorn", "-k", "uvicorn.workers.UvicornWorker", "app.main:app", "-b", "0.0.0.0:8000", "--workers", "2", "--threads", "4", "--timeout", "60"]
   CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
   
