Fix APT lock conflict in multi-platform backend builds by removing /var/lib/apt cache mount

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,8 +10,8 @@
       PATH="/root/.local/bin:${PATH}"
   
   # Faster apt + clean
+  # Note: Only cache /var/cache/apt, not /var/lib/apt to avoid lock conflicts in multi-platform builds
   RUN --mount=type=cache,target=/var/cache/apt \
-      --mount=type=cache,target=/var/lib/apt \
       apt-get update -y \
    && apt-get install -y --no-install-recommends build-essential curl \
    && rm -rf /var/lib/apt/lists/*
